# stm32f1xx

./: CMakeLists.txt
drivers/: CMakeLists.blah
drivers/STM32F1xx/include/: stm32f1xx_ll_usart.h
hal/adc/: adc_registers.hpp
hal/dma/: dma.hpp  dma_kernel.hpp  dma_registers.hpp
hal/exti/: exti.hpp  exti_kernel.hpp  exti_registers.hpp  exti_shared_irq.hpp
hal/flash/: flash_kernel.hpp  flash_registers.hpp
hal/gpio/: gpio.hpp  gpio_kernel.hpp  gpio_registers.hpp
hal/include/: delegate.hpp  expected.hpp  fifo_buffer.hpp  function.hpp
hal/rcc/: rcc.hpp  rcc_kernel.hpp  rcc_registers.hpp
hal/spi/: spi.hpp  spi_kernel.hpp  spi_registers.hpp
hal/system/: clock.hpp  interrupt.hpp  tick.hpp
hal/systick/: systick_kernel.hpp  systick_registers.hpp
hal/usart/: usart.hpp  usart_kernel.hpp  usart_registers.hpp
hal/utils/: hardware_register.hpp  utility.hpp
